--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   xori-service:
-    image: xori:latest
+    image: alanvivona/xori:latest
     restart: always
     ports:
     - "127.0.0.1:5000:5000"
